tests/ui/match/issue-72896-non-partial-eq-const.stderr
error: constant of non-structural type `EnumSet<Enum8>` in a pattern
  --> $DIR/issue-72896-non-partial-eq-const.rs:19:9
   |
LL | struct EnumSet<T: EnumSetType> {
   | ------------------------------ `EnumSet<Enum8>` must be annotated with `#[derive(PartialEq)]` to be usable in patterns
...
LL | const CONST_SET: EnumSet<Enum8> = EnumSet { __enumset_underlying: 3 };
   | ------------------------------- constant defined here
...
LL |         CONST_SET => { /* ok */ }
   |         ^^^^^^^^^ constant of non-structural type
   |
help: if `EnumSet<Enum8>` manually implemented `PartialEq`, you could add a condition to the match arm checking for equality
   |
LL -         CONST_SET => { /* ok */ }
LL +         binding if binding == CONST_SET => { /* ok */ }
   |

error: aborting due to 1 previous error

